--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8"/>
-    <title>Canvas tutorial</title>
+    <title>Spiroman</title>
+Spiroman!
     <script type="text/javascript">
+
       function draw() {
-        var canvas = document.getElementById('tutorial');
+        var canvas = document.getElementById('spiro');
         if (canvas.getContext) {
           var ctx = canvas.getContext('2d');
         }
+
       }
     </script>
+    
     <style type="text/css">
       canvas { border: 1px solid black; }
     </style>
   </head>
+
   <body onload="draw();">
-    <canvas id="tutorial" width="150" height="150"></canvas>
+    <canvas id="spiro" width="150" height="150"></canvas>
   </body>
 </html>
